# rehearsal-scheduler

./: .coveragerc  .gitignore  README.md  ScheduleAnalysis.txt  analyze_refactor_impact.py  build_existing_workbook.py  dance_constraints_catalog.csv  errors.txt  evaluation_results.csv  evaluation_results_validated.csv  foo.csv  pyproject.toml  requirements.txt  venue_availability.csv
archive/: temporal_parser.py
config/: workbook_config.yaml  workbook_export.yaml
config/workbook_specs/: README.md
config/workbook_specs/lookup_tables/: choreographers.yaml  dance_cast.yaml  dancers.yaml  dances.yaml
config/workbook_specs/production/: production.yaml  production_program.yaml  show_order.yaml
config/workbook_specs/scheduling/: allotted.yaml  dance_group.yaml  dancer_constraints  dancer_constraints.yaml  rd_constrains  rd_constraints.yaml  rd_requests.yaml  rehearsal.yaml  rehearsal_directors.yaml  venues.yaml
docs/: Implementation Guide - RD - Dancer Separation.md  Integration_steps_RD_dancer.md  LLM_Constraint_Parser_Evaluation_Report.md  LLM_evaluation_report.md  LookUpTables.md  Rehearsal Ranking.md  Status and Plan.md  auto-schedule-design.md  continuation_guide.md  dancer-constraints-guide.html  dancer-constraints-guide.md  export_tool.md  google-api-setup.md  google_apps_script_setup.md  production_workbook_guide.md  quick-start.md  sheet_sync.md  transfering_to_org.md  troubleshooting.md  workbook_builder.md
notebooks/: AddAllocatedColumn.ipynb  ExploreConflicts.ipynb
notebooks/data/: conflicts.csv  dance_director_map.csv  dance_list.csv  dance_matrix.csv  rhd_conflicts.csv  time_requests.csv  venue_schedule.csv
reports/: venue_availability_summary.txt
src/ai_evaluation/: evaluate_constraint_parser.py  process_availability.py  revalidate_results.py
src/dance_scheduler/: Explore_EBNF.ipynb  conflict_finder.py  constraints.py  grammar.py  scheduling_rule.py  temporal_parser.py
src/gas/: Code.js
src/rehearsal_scheduler/: Explore_EBNF.ipynb  check_constraints.py  conflict_finder.py  constraints.py  grammar.py  old_grammar.py  scheduler.py  scheduler_cli.py  scheduling_rule.py  sheet_sync.py
src/rehearsal_scheduler/domain/: catalog_generator.py  conflict_analyzer.py  conflict_catalog.py  constraint_validator.py  scheduling_catalog.py  time_analyzer.py
src/rehearsal_scheduler/models/: __init__.py  interval_operations.py  interval_parsing.py  intervals.py
src/rehearsal_scheduler/persistence/: base.py  data_loader.py
src/rehearsal_scheduler/reporting/: analysis_formatter.py  catalog_formatter.py  constraint_formatter.py  scheduling_formatter.py  validation_formatter.py
src/rehearsal_scheduler/scheduling/: __init__.py  conflicts.py  constraint_first_scheduler.py  validator.py
src/rehearsal_scheduler/scripts/: SheetUpdate.ipynb  analyze_conflicts.py  analyze_scheduling.py  build_workbook.py  check_constraints.py  data_loader.py  export_workbooks.py  generate_availability_matrix.py  generate_schedule.py  populate_production_dancers.py  scheduler_cli.py
src/rehearsal_scheduler/workbook_builder/: formula_builder.py
test/integration/: test_google_sheets.py  test_rd_availability.py  test_scheduling_catalog.py
test/unit/: EBNF_Date_testing.ipynb  Explore_EBNF.ipynb  test_catalog_generator.py  test_check_constraints_sheets.py  test_constraints.py  test_constraints_edge_cases.py  test_day_with_explicit_time.py  test_find_conflicts_in_range.py  test_grammar.py  test_grammar_bad_date.py  test_grammar_date_constraints.py  test_grammar_day_of_week.py  test_grammar_multiple_constraints.py  test_grammar_semantic_error.py  test_grammar_syntax_error.py  test_grammar_time_of_date.py  test_grammar_time_of_day.py  test_interval_edge_cases.py
test/unit/domain/: test_catalog_generator.py  test_conflict_analyzer.py  test_constraint_validator.py  test_time_analyzer.py
test/unit/models/: test_interval_operations.py  test_interval_parsing.py  test_intervals.py  test_parse_time_to_military.py
test/unit/persistence/: test_base.py
test/unit/scheduling/: test_scheduling_conflicts.py  test_validator.py
test/unit/workbook_builder/: test_formula_builder.py
