[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rehearsal_scheduler"
version = "0.1.0"
description = "A utility to parse and resolve scheduling conflicts for a dance production rehearsals."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Fred Mitchell", email = "FMitchell75@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
check-constraints = "rehearsal_scheduler.check_constraints:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "ipykernel", # For running in JupyterLab
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-v --tb=short --cov=rehearsal_scheduler"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes, pycodestyle, and isort.
select = ["E", "F"]

# Add this to the end of your pyproject.toml

[tool.coverage.run]
source = ["rehearsal_scheduler"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.coverage.html]
directory = "coverage_html_report"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true