[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rehearsal_scheduler"
version = "0.1.0"
description = "A utility to parse and resolve scheduling conflicts for a dance production rehearsals."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Fred Mitchell", email = "FMitchell75@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lark",
    "click",
]

[project.scripts]
build-workbook = "rehearsal_scheduler.scripts.build_workbook:cli"
check-constraints = "rehearsal_scheduler.scripts.check_constraints:cli"
analyze-conflicts = "rehearsal_scheduler.scripts.analyze_conflicts:cli"
analyze-scheduling = "rehearsal_scheduler.scripts.analyze_scheduling:cli"
generate-availability = "rehearsal_scheduler.scripts.generate_availability_matrix:cli"
export-workbooks = "rehearsal_scheduler.scripts.export_workbooks:cli"
add-dancers-to-program = "rehearsal_scheduler.scripts.populate_production_dancers:main"
rehearsal-schedule = "rehearsal_scheduler.scripts.scheduler_cli:cli"

evaluate-llms = "ai_evaluation.evaluate_constraint_parser:cli"
revalidate-results = "ai_evaluation.revalidate_results:cli"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ipykernel",  # For running in JupyterLab
]
sheets = [
    "gspread",
    "google-auth",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src/rehearsal_scheduler",
    "--cov-config=pyproject.toml",
]

[tool.dotenv]
DOTENV_FILE = ".env"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]

[tool.coverage.run]
source = ["rehearsal_scheduler"]
branch = true

[tool.coverage.report]
omit = [
    "*/scripts/*",
    "*/reporting/*",
]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if DEBUG:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true